--- a/expenses-backend.yaml
+++ b/expenses-backend.yaml
@@ -4,7 +4,7 @@ services:
     image: "${EXPENSES_BACKEND_IMAGE}"
     container_name: "expenses-backend"
     ports:
-      - "5265:80"
+      - "${EXPENSES_BACKEND_PORT}:80"
     networks:
       - default
     env_file:
