--- a/expenses-ui.yaml
+++ b/expenses-ui.yaml
@@ -4,7 +4,7 @@ services:
     image: "${EXPENSES_UI_IMAGE}"
     container_name: "expenses-ui"
     ports:
-      - "80:80"
+      - "${EXPENSES_UI_PORT}:80"
     networks:
       - default
     env_file:
